<resources>
    <string name="app_name">login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Acount</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_login_with">or Login with</string>
    <string name="save_user_data">Save User Data</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="or_sign_up_with">or Sign up with</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_to_existing_account">Login to exixting account</string>
    <string name="send_email">Send Email</string>
    <string name="logout">Logout</string>
</resources>
