<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".ForgetPasswordActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password_textView"
        android:text="@string/forgot_password"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password_form"
        android:layout_below="@+id/forgot_password_textView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="40dp"
            android:id="@+id/horizontal_logo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:padding="10dp"
            android:layout_marginTop="25dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_email_btn"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:text="@string/send_email"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:background="@drawable/button_background"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_new"
            android:text="@string/create_new_account"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_existing"
            android:text="@string/login_to_existing_account"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>



</RelativeLayout>