<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".SaveUserDataActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_textView"
        android:text="@string/save_user_data"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@+id/signup_textView"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/horizontal_logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_form"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:background="@drawable/edittext_background"
            android:hint="@string/name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:enabled="false"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:padding="10dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dob"
                android:inputType="date"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/date_of_birth"/>
        </RelativeLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/save_user_data"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:background="@drawable/button_background"/>
    </LinearLayout>

</RelativeLayout>