<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".SignUpActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_textView"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <ImageView
        android:id="@+id/horizontal_logo"
        android:layout_width="207dp"
        android:layout_height="36dp"
        android:layout_below="@+id/signup_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@mipmap/wish" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_form"
        android:layout_below="@id/horizontal_logo"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:background="@drawable/edittext_background"
            android:hint="@string/name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/visiblity2"
                android:src="@drawable/ic_visibility"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_password"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/confirm_password"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/visiblity3"
                android:src="@drawable/ic_visibility"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_btn"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/sign_up"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:background="@drawable/button_background"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_existing"
        android:text="@string/login_to_existing_account"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/sign_up_form"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_marginTop="0dp"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_up_with"
            android:textColor="@android:color/white"
            android:textSize="21sp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/google_login_btn"
            android:background="@drawable/button_background"
            android:src="@drawable/ic_google"
            android:padding="10dp"
            android:layout_marginTop="25dp"/>

    </LinearLayout>

</RelativeLayout>